# TgBot_Test

./: .gitignore  Cargo.toml  README.md
src/: connector.rs  db.rs  dto.rs  general_handler.rs  main.rs  polling.rs  types.rs
src/handlers/: common.rs  history.rs  mod.rs  prev_next.rs
src/helpers/: mod.rs  parser.rs  prop_gen.rs
