[package]
name = "y_tbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] } # для отправки http запросов

async-stream = "0.3"
futures = "0.3"
futures-core = "0.3"
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"

mobc = "0.7"
mobc-redis = "0.7.0"
redis = { version = "0.19", features = ["tokio-comp", "connection-manager"]}
